--- a/stackfiles/default.yaml
+++ b/stackfiles/default.yaml
@@ -1,14 +1,5 @@
 type: app
 description: Default stackfile usecase description
 # template used to create the project
-template: jupyter-pyspark-stack/<template-name>
-inputs:
-  some_input: value
+template: jupyter-pyspark-stack/jupyter-pyspark
 # list of plugins to be applied after project creation
-plugins:
-  - plugin: jupyter-pyspark-stack/<plugin-name>
-    inputs:
-      some_input: value
-      some_list:
-        - item1
-        - item2
